# cvp-enum

./: .gitignore  CMakeLists.txt  README.md
examples/: README.md
examples/parameter_bin/: README.md
examples/parameter_std/: README.md
examples/parameter_ter/: README.md
src.in/: cmdline_decoding.c  cmdline_decoding.ggo  cmdline_decoding.h  cmdline_enumeration.c  cmdline_enumeration.ggo  cmdline_enumeration.h  cmdline_lwesampler.c  cmdline_lwesampler.ggo  cmdline_lwesampler.h  cmdline_reduction.c  cmdline_reduction.ggo  cmdline_reduction.h
src/bindecoding/: cmdline_decoding.h  main_decoding.cpp
src/binenumeration/: cmdline_enumeration.h  enumeration.h  enumeration_babai.cpp  enumeration_helper.cpp  enumeration_ln.cpp  enumeration_lp.cpp  enumeration_ntl.cpp  main_enumeration.cpp
src/binlwesampler/: cmdline_lwesampler.c  cmdline_lwesampler.h  lwesampler.cpp  lwesampler.h  main_lwesampler.cpp  ziggurat.cpp  ziggurat.h
src/binreduction/: cmdline_reduction.h  main_reduction.cpp  reduction.cpp  reduction.h
src/libtoolbox/: conversions.h  io.h  matrix_helper.cpp  matrix_helper.h  matrix_operations.cpp  matrix_operations.h  signals.h  vector_templates.h
